--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-chunk": "^1.0.11",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
